# carquet

./: .clangd  CHANGELOG.md  CMakeLists.txt  README.md  README_v2.md
.github/workflows/: cpp.yml
benchmark/: benchmark_arrow_cpp.cpp  benchmark_carquet.c  benchmark_pyarrow.py  generate_test_files.c  profile_core.c  run_benchmark.py
ci/: environment.yml
docs/: README.md  error-handling.md  nested-data.md  performance.md  reading.md  writing.md
examples/: advanced_features.c  basic_write_read.c  compression_codecs.c  data_types.c  nullable_columns.c
fuzz/: README.md  fuzz_compression.c  fuzz_encodings.c  fuzz_reader.c  fuzz_roundtrip.c  fuzz_thrift.c  fuzz_writer.c  run_fuzzer.py
include/carquet/: carquet.h
interop/: interop_0.3.2_darwin_arm64_20260315.json  interop_0.4.0_darwin_arm64_20260315.json  roundtrip_writer.c  run_interop.py
profiling/: README.md  profile_micro.c  profile_read.c  profile_write.c  run_profiler.py
src/cli/: cli.h  codegen.c  codegen_read.c  codegen_write.c  commands.c  main.c
src/compression/: gzip.c  lz4.c  snappy.c  zstd.c
src/core/: allocator.c  bitpack.c  buffer.c  compat.h
src/encoding/: byte_stream_split.c  delta.c  dictionary.c  plain.c  rle.c  rle.h
src/metadata/: bloom_filter.c  page_index.c  schema.c
src/reader/: batch_reader.c  column_reader.c  file_reader.c  mmap_reader.c  page_reader.c  reader_internal.h  worker_pool.c  worker_pool.h
src/simd/: detect.c  dispatch.c
src/simd/arm/: crc32_arm.c  neon_ops.c  sve_ops.c
src/simd/x86/: avx2_ops.c  avx512_ops.c  avx_ops.c  sse_ops.c
src/util/: crc32.c
src/writer/: column_writer.c  file_writer.c  page_writer.c  row_group_writer.c
tests/: test_advanced_api.c  test_bloom_page_index.c  test_compression.c  test_core.c  test_edge_io.c  test_encodings.c  test_encodings_extended.c  test_large_schema.c  test_maturity.c  test_mmap.c  test_nested.c  test_production.c  test_reader.c
